samples/_failures_safe/1761490435_bcacaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73b2d5e0.c: In function ‘main’:
./samples/SAFE/__tmp_73b2d5e0.c:151:43: error: expected ‘)’ at end of input
  151 |     int num_operations = sizeof(operations
      |                                ~          ^
      |                                           )
./samples/SAFE/__tmp_73b2d5e0.c:151:5: error: expected declaration or statement at end of input
  151 |     int num_operations = sizeof(operations
      |     ^~~
